[package]
name = "juniper_aws_api_gateway_lambda"
version = "0.1.0"
authors = ["Selmeci <selmeci.roman@gmail.com>"]
keywords = ["graphql", "juniper", "aws-apigateway", 'aws-lambda']
description = "Juniper GraphQL integration for AWS API Gateway lambda runtime"
repository = "https://github.com/selmeci/juniper_aws_api_gateway_lambda"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.2"
failure = "0.1"
http = "0.2"
juniper = { version = "0.14.2", default-features = false }
lambda = {git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
maplit = "1.0"
percent-encoding = "2.1"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
