[package]
name = "api_gateway"
version = "0.1.0"
authors = ["Selmeci <selmeci.roman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.2"
lambda = {git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
failure = "0.1"
juniper = "0.14.2"
juniper_aws_api_gateway_lambda = {path = "../../"}
maplit = "1.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }